[gd_scene load_steps=43 format=3 uid="uid://focw42gin5w6"]

[ext_resource type="Script" path="res://Player.gd" id="1_5scwy"]
[ext_resource type="PackedScene" uid="uid://bagvryoswmavp" path="res://scenes/Minimap.tscn" id="2_p4h6q"]
[ext_resource type="Environment" uid="uid://b7cjtkm44887y" path="res://environment.tres" id="2_y84fs"]
[ext_resource type="AudioStream" uid="uid://cofkvx0m86nkx" path="res://assets/sound/music/Track2.wav" id="4_ghit1"]
[ext_resource type="Texture2D" uid="uid://bk3h0javktg5" path="res://UI/UIBorder_BottomLeft.png" id="5_12cjs"]
[ext_resource type="AudioStream" uid="uid://dbeexg1i7b6wn" path="res://assets/sound/Footsteps/Footstep_27.wav" id="5_cthpd"]
[ext_resource type="AudioStream" uid="uid://b2raef2ecqp2d" path="res://assets/sound/Footsteps/Footstep_1.wav" id="5_uiar2"]
[ext_resource type="AudioStream" uid="uid://cxlnbplxxwqb5" path="res://assets/sound/Footsteps/Footstep_2.wav" id="6_7ennl"]
[ext_resource type="Texture2D" uid="uid://c72aqjir0bf13" path="res://UI/UI Background.png" id="6_38n3a"]
[ext_resource type="Texture2D" uid="uid://b5cv0wqsugka3" path="res://UI/UIBorder_BottomRight.png" id="6_jpxsi"]
[ext_resource type="Texture2D" uid="uid://jj8ocmc5stsv" path="res://assets/textures/Healthbar.png" id="6_l2wt2"]
[ext_resource type="Texture2D" uid="uid://cy0nuju8tgo34" path="res://UI/UIBorder_TopRight.png" id="7_1kggi"]
[ext_resource type="AudioStream" uid="uid://ct6dqw4b7x52d" path="res://assets/sound/Footsteps/Footstep_11.wav" id="7_nibwj"]
[ext_resource type="AudioStream" uid="uid://doh73pi3x1pfj" path="res://assets/sound/Footsteps/Footstep_12.wav" id="8_ft43s"]
[ext_resource type="Texture2D" uid="uid://uvlq16xarry8" path="res://assets/textures/Mana.png" id="8_vji2m"]
[ext_resource type="Texture2D" uid="uid://cpurqaepm2dpy" path="res://assets/textures/Grass.png" id="8_wht7f"]
[ext_resource type="Texture2D" uid="uid://c7s61cgm5etqw" path="res://assets/textures/DirtPath.png" id="9_0hqsn"]
[ext_resource type="AudioStream" uid="uid://bcokfrakubui2" path="res://assets/sound/Footsteps/Footstep_13.wav" id="9_r66n0"]
[ext_resource type="AudioStream" uid="uid://bp8rmej33pw1k" path="res://assets/sound/Footsteps/Footstep_14.wav" id="10_jps2j"]
[ext_resource type="AudioStream" uid="uid://hpwdg50wtfts" path="res://assets/sound/Footsteps/Footstep_15.wav" id="11_8ys1k"]
[ext_resource type="PackedScene" uid="uid://cmgveewxmtslk" path="res://card_manager.tscn" id="12_jrgwo"]
[ext_resource type="AudioStream" uid="uid://cs8vsyhkqi3e5" path="res://assets/sound/Footsteps/Footstep_16.wav" id="12_spxx6"]
[ext_resource type="AudioStream" uid="uid://twd4vnquo78l" path="res://assets/sound/Footsteps/Footstep_17.wav" id="13_8pmr1"]
[ext_resource type="AudioStream" uid="uid://crykt2m2owq40" path="res://assets/sound/Footsteps/Footstep_18.wav" id="14_klo0w"]
[ext_resource type="AudioStream" uid="uid://i5r4hjwi17pm" path="res://assets/sound/Footsteps/Footstep_19.wav" id="15_v4353"]
[ext_resource type="AudioStream" uid="uid://bels1ksupbcqs" path="res://assets/sound/Footsteps/Footstep_20.wav" id="16_dcbai"]
[ext_resource type="AudioStream" uid="uid://b7nouc7l4sf6p" path="res://assets/sound/Footsteps/Footstep_3.wav" id="17_gxxv7"]
[ext_resource type="AudioStream" uid="uid://2obdub2p4tck" path="res://assets/sound/Footsteps/Footstep_21.wav" id="18_vly62"]
[ext_resource type="AudioStream" uid="uid://cwe5l73o2vu0y" path="res://assets/sound/Footsteps/Footstep_22.wav" id="19_csq8o"]
[ext_resource type="AudioStream" uid="uid://dnyxt3c58fqbd" path="res://assets/sound/Footsteps/Footstep_23.wav" id="20_tev1l"]
[ext_resource type="AudioStream" uid="uid://c0p8h4qrpnqnl" path="res://assets/sound/Footsteps/Footstep_24.wav" id="21_r54yg"]
[ext_resource type="AudioStream" uid="uid://df72ewx8phm15" path="res://assets/sound/Footsteps/Footstep_25.wav" id="22_k8uy8"]
[ext_resource type="AudioStream" uid="uid://cpy26i61a11kq" path="res://assets/sound/Footsteps/Footstep_26.wav" id="23_m2use"]
[ext_resource type="AudioStream" uid="uid://btc0ie2ovg2qv" path="res://assets/sound/Footsteps/Footstep_4.wav" id="28_cdq2g"]
[ext_resource type="AudioStream" uid="uid://c3jp0llplujpm" path="res://assets/sound/Footsteps/Footstep_5.wav" id="38_ortbo"]
[ext_resource type="AudioStream" uid="uid://rkeem41rkp10" path="res://assets/sound/Footsteps/Footstep_6.wav" id="39_mhmb4"]
[ext_resource type="AudioStream" uid="uid://t44ggle73u8g" path="res://assets/sound/Footsteps/Footstep_7.wav" id="40_hal0r"]
[ext_resource type="AudioStream" uid="uid://bxs1y5w3ca0vt" path="res://assets/sound/Footsteps/Footstep_8.wav" id="41_qnglr"]
[ext_resource type="AudioStream" uid="uid://cj1rhjh21gs5p" path="res://assets/sound/Footsteps/Footstep_9.wav" id="42_vfavm"]
[ext_resource type="AudioStream" uid="uid://47e3a54swaws" path="res://assets/sound/Footsteps/Footstep_10.wav" id="43_78or4"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_88xqq"]
playback_mode = 1
random_pitch = 1.24
random_volume_offset_db = 0.98
streams_count = 27
stream_0/stream = ExtResource("5_uiar2")
stream_0/weight = 1.0
stream_1/stream = ExtResource("6_7ennl")
stream_1/weight = 1.0
stream_2/stream = ExtResource("17_gxxv7")
stream_2/weight = 1.0
stream_3/stream = ExtResource("28_cdq2g")
stream_3/weight = 1.0
stream_4/stream = ExtResource("38_ortbo")
stream_4/weight = 1.0
stream_5/stream = ExtResource("39_mhmb4")
stream_5/weight = 1.0
stream_6/stream = ExtResource("40_hal0r")
stream_6/weight = 1.0
stream_7/stream = ExtResource("41_qnglr")
stream_7/weight = 1.0
stream_8/stream = ExtResource("42_vfavm")
stream_8/weight = 1.0
stream_9/stream = ExtResource("43_78or4")
stream_9/weight = 1.0
stream_10/stream = ExtResource("7_nibwj")
stream_10/weight = 1.0
stream_11/stream = ExtResource("8_ft43s")
stream_11/weight = 1.0
stream_12/stream = ExtResource("9_r66n0")
stream_12/weight = 1.0
stream_13/stream = ExtResource("10_jps2j")
stream_13/weight = 1.0
stream_14/stream = ExtResource("11_8ys1k")
stream_14/weight = 1.0
stream_15/stream = ExtResource("12_spxx6")
stream_15/weight = 1.0
stream_16/stream = ExtResource("13_8pmr1")
stream_16/weight = 1.0
stream_17/stream = ExtResource("14_klo0w")
stream_17/weight = 1.0
stream_18/stream = ExtResource("15_v4353")
stream_18/weight = 1.0
stream_19/stream = ExtResource("16_dcbai")
stream_19/weight = 1.0
stream_20/stream = ExtResource("18_vly62")
stream_20/weight = 1.0
stream_21/stream = ExtResource("19_csq8o")
stream_21/weight = 1.0
stream_22/stream = ExtResource("20_tev1l")
stream_22/weight = 1.0
stream_23/stream = ExtResource("21_r54yg")
stream_23/weight = 1.0
stream_24/stream = ExtResource("22_k8uy8")
stream_24/weight = 1.0
stream_25/stream = ExtResource("23_m2use")
stream_25/weight = 1.0
stream_26/stream = ExtResource("5_cthpd")
stream_26/weight = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_cucvd"]

[node name="Player" type="Node3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -0.5)
script = ExtResource("1_5scwy")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
omni_range = 3.245
omni_attenuation = 0.435275

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RayForward" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.164085, 0)
exclude_parent = false
target_position = Vector3(0, 0, -1)
collision_mask = 2
hit_from_inside = true
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false
debug_shape_thickness = 5

[node name="RayBack" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.164085, 0)
exclude_parent = false
target_position = Vector3(0, 0, 1)
collision_mask = 2
hit_from_inside = true
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="RayRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000561774, 0.165698, -0.00063169)
exclude_parent = false
target_position = Vector3(1, 0, 0)
collision_mask = 2
hit_from_inside = true
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false

[node name="RayLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.164085, 0)
exclude_parent = false
target_position = Vector3(-1, 0, 0)
collision_mask = 2
hit_from_inside = true
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0.960784, 0, 0.501961, 1)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.105512, 0.599153)
light_color = Color(0.792157, 0.541176, 0.211765, 1)
spot_range = 2.185
spot_attenuation = 4.5948
spot_angle_attenuation = 12.4232

[node name="MovementCooldownTimer" type="Timer" parent="."]
wait_time = 0.235

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.581

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.834
anchor_bottom = 0.679
offset_right = 0.119995
offset_bottom = 0.0399933
stretch = true

[node name="SubViewport" type="SubViewport" parent="Control/SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_3d = true
size = Vector2i(960, 440)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Control/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -0.275)
environment = ExtResource("2_y84fs")
doppler_tracking = 2
current = true

[node name="Minimap" parent="Control/SubViewportContainer/SubViewport/Camera3D" instance=ExtResource("2_p4h6q")]

[node name="MusicPlayer" type="AudioStreamPlayer3D" parent="Control/SubViewportContainer/SubViewport/Camera3D"]
process_mode = 3
stream = ExtResource("4_ghit1")
autoplay = true
bus = &"Music"
doppler_tracking = 2

[node name="playerAudioPlayer" type="AudioStreamPlayer3D" parent="Control/SubViewportContainer/SubViewport/Camera3D"]
stream = SubResource("AudioStreamRandomizer_88xqq")

[node name="BoxContainer" type="NinePatchRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.215
anchor_bottom = 0.662
offset_left = 902.0
offset_right = 902.32
offset_bottom = 0.0239563
texture = ExtResource("6_38n3a")

[node name="StatusDisplay" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 833.0
offset_top = 25.0
offset_right = 897.0
offset_bottom = 89.0
texture = ExtResource("8_wht7f")

[node name="ProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 540.0
offset_top = 14.0
offset_right = 790.0
offset_bottom = 50.0
max_value = 10.0
value = 9.0
fill_mode = 1
nine_patch_stretch = true
texture_progress = ExtResource("6_l2wt2")

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_top = 377.0
offset_right = 271.0
offset_bottom = 648.0
texture = ExtResource("5_12cjs")

[node name="Mana" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 869.0
offset_top = 257.0
offset_right = 909.0
offset_bottom = 293.0
max_value = 5.0
value = 5.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("8_vji2m")

[node name="TextureRect" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 757.0
offset_top = 243.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("6_jpxsi")

[node name="TextureRect2" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 516.0
offset_right = 1152.0
offset_bottom = 125.0
texture = ExtResource("7_1kggi")

[node name="PausePopup" type="Control" parent="."]
visible = false
layout_mode = 3
anchor_left = 0.126
anchor_top = 0.179
anchor_right = 0.816
anchor_bottom = 0.833
offset_left = -145.152
offset_top = -115.992
offset_right = -900.032
offset_bottom = -499.784

[node name="VBoxContainer" type="VBoxContainer" parent="PausePopup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.625
anchor_top = 3.742
anchor_right = 20.268
anchor_bottom = 13.408
offset_top = 1.31999
offset_right = 6.27991
offset_bottom = -10.3201

[node name="TextureButton" type="TextureButton" parent="PausePopup/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_wht7f")

[node name="QuitButton" type="TextureButton" parent="PausePopup/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_0hqsn")

[node name="PlayerHB" type="Area3D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerHB"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.495, 0)
visible = false
shape = SubResource("BoxShape3D_cucvd")

[node name="CardManager" parent="." instance=ExtResource("12_jrgwo")]
texture_filter = 2

[connection signal="timeout" from="MovementCooldownTimer" to="." method="_on_movement_cooldown_timer_timeout"]
[connection signal="pressed" from="PausePopup/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
